--- a/src/ToolTip.css
+++ b/src/ToolTip.css
@@ -3,8 +3,16 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 400px;
+    width: 500px;
     margin: auto;
+}
+
+.btns button {
+    background-color: black;
+    color: white;
+    border-radius: 30px;
+    width: 100px;
+    height: 30px;
 }
 
 /* classes for the tooltip component */
